# Xiranite

./: .gitignore  .gitmodules  AGENTS.md  DESIGN.md  NODE_REWRITE_PLAN.md  PROJECT_ARCHITECTURE_CONTEXT.md  PROJECT_ARCHITECTURE_FULL_DUMP.md  PROJECT_REACT_KEY_FILES.md  README.md  browser_runtime_config_test.go  components.json  electrobun.config.ts  go.mod  index.html  local_backend.go  local_backend_embed_production.go  local_backend_test.go  main.go  native_assets.go  native_assets_embed_dev.go  native_assets_embed_production.go  native_assets_test.go  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  service.go  subprocess_attr_other.go  taskbar_icon_other.go  taskbar_icon_windows.go  taskbar_identity.go  taskbar_identity_other.go  taskbar_identity_test.go  taskbar_identity_windows.go  tmp_check2.py  tray_manager.go  tray_manager_test.go  tsconfig.app.json  tsconfig.node.json  tsconfig.verify.json  (+5 more)
__noop__/: AGENTS.md  README.md  browser_runtime_config.go  browser_runtime_config_test.go  go.mod  go.sum  index.html  local_backend_embed_dev.go  package.json  subprocess_attr_windows.go  tmp_check.py  webview_flags_production.go
__noop__/native/arcthumb-node/: Cargo.toml
build-html/: index.html
config/: webview2-flags.json
desktop/: bridge.ts  nodeRunner.ts
docs/: aestivus.md  bandia-tui-visual-review.md  classq-tui-visual-review.md  cli-interaction-modes.md  cli-modernization-plan.md  cli-naming-and-guided-ui.md  cli-shims.md  context-menu-optimization-plan.md  czkawka-fork-migration-checklist.md  czkawka-tui-visual-review.md  desktop-file-drop-api.md  desktop-tray.md  development-sessions.md  dissolvef-tui-visual-review.md  external-node-packages.md  frontend-node-config-plan.md  gitalso-tui-visual-review.md  kavvka-tui-visual-review.md  lorat-tui-visual-review.md  modernization-strategy.md  mvz-tui-visual-review.md  nameu-tui-visual-review.md  neoview-card-functional-checklist.md  neoview-config-format.md  neoview-explorer-ui-guidelines.md  neoview-feature-checklist.md  neoview-folder-penetration.md  neoview-migration.md  neoview-reader-performance.md  neoview-swimlane-ui.md  neoview-thumbnail-system-benchmark.md  node-authoring.md  node-config-toml-strategy.md  node-specific-ui-redesign.md  node-specs-for-ui-design.md  node-ui-redesign-plan.md  opentui-sixel-gallery-lessons.md  rawfilter-tui-visual-review.md  react-compiler-memo-audit.md  samea-tui-visual-review.md  (+12 more)
electron/: electrobun.ts  index.ts  main.ts  nodeRunner.ts  runtimeBridge.ts
icon/: gemini-code-1783343876512.html
native/: Cargo.toml
native/arcthumb-core/: Cargo.toml
native/arcthumb-core/src/: lib.rs
native/arcthumb-core/src/arcthumb/: limits.rs  mod.rs  settings.rs  wic.rs
native/arcthumb-core/src/arcthumb/archive/: mod.rs  tar.rs  zip.rs
native/arcthumb-core/src/arcthumb/ebook/: epub.rs
native/czkawka-core/: Cargo.toml
native/czkawka-core/src/: lib.rs
native/czkawka-node/: Cargo.toml
native/czkawka-node/src/: lib.rs
native/node/: Cargo.toml
native/node/src/: lib.rs
repacku-cli-check/: repacku-cli-check_config.json
repacku-guided-check/: repacku-guided-check_config.json
repacku-inquirer-check/: repacku-inquirer-check_config.json
repacku-width-check/: repacku-width-check_config.json
scripts/: _add-build-tsgo.mjs  _add-types.mjs  _tmp-history-repro.ts  audit-build-chunks.ts  audit-config-runtime-state.ts  audit-neoview-book-information-chunk.ts  audit-neoview-build-chunk.ts  (+90 more)
(+2158 files in other folders)
