[package]
name = "xiranite-arcthumb-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = []
wic = ["dep:windows"]
windows-shell = ["dep:windows"]

[lib]
crate-type = ["rlib"]

[dependencies]
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "tiff", "ico", "webp"] }
jpeg-decoder = "0.3"
mobi = "0.8"
quick-xml = "0.40"
sevenz-rust = "0.6"
tar = "0.4"
thiserror = "2"
unrar = "0.5"
zip = { version = "8", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", optional = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
] }

[dev-dependencies]
crc32fast = "1"
tempfile = "3"
