[package]
name = "xiranite-czkawka-node"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["napi8", "async"] }
napi-derive = "3"
xiranite-czkawka-core = { path = "../czkawka-core" }

[build-dependencies]
napi-build = "2"
