[package]
name = "xiranite-image-node"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["napi8", "async"] }
napi-derive = "3"

[target.'cfg(windows)'.dependencies]
xiranite-image-core = { path = "../core", features = ["wic"] }

[target.'cfg(not(windows))'.dependencies]
xiranite-image-core = { path = "../core" }

[build-dependencies]
napi-build = "2"
