[package]
name = "xiranite-arcthumb-node"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["napi8", "async"] }
napi-derive = "3"

[target.'cfg(windows)'.dependencies]
xiranite-arcthumb-core = { path = "../arcthumb-core", features = ["wic", "windows-shell"] }

[target.'cfg(not(windows))'.dependencies]
xiranite-arcthumb-core = { path = "../arcthumb-core" }

[build-dependencies]
napi-build = "2"
